Bug 1951857 - tabs in collapsed tab groups should not be in accessibility tree r=dao,desktop-theme-reviewers,tabbrowser-reviewers
Added a `visibility` transition on tabs to match the transition duration that we use for the expand/collapse animation of horizontal tab groups. Added `visibility: hidden` on tabs in collapsed tab groups so that they are removed from the accessibility tree at the end of the collapse animation.

Differential Revision: https://phabricator.services.mozilla.com/D254326

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -195,7 +195,8 @@
     max-width: 225px;
     transition:
       min-width 100ms ease-out,
-      max-width 100ms ease-out;
+      max-width 100ms ease-out,
+      visibility 100ms;
 
     #tabbrowser-tabs[orient="horizontal"] &[fadein] {
       min-width: var(--tab-min-width-pref, var(--tab-min-width));
@@ -1011,6 +1012,7 @@ tab-group {
   #tabbrowser-tabs[orient="horizontal"] &[collapsed] > .tabbrowser-tab {
     min-width: 0 !important;
     max-width: 0 !important;
+    visibility: hidden;
     padding: 0;
     overflow-clip-margin: 0;
   }
